# solorzano_proyectos

./: .env  README.md  db.sqlite3  main.py  pyproject.toml  script.sql
.github/workflows/: deploy.yml
.pytest_cache/v/cache/: nodeids
config/: settings.py  urls.py
proyectos/: admin.py  apps.py  filters.py  pagination.py  permissions.py  urls.py
proyectos/migrations/: 0001_initial.py  0002_disenador_redsocial.py
proyectos/models/: __init__.py  cliente.py  disenador.py  evento.py  proveedor.py  red_social.py  tarea.py  usuario.py
proyectos/serializers/: __init__.py  auth.py  cliente.py  disenador.py  evento.py  proveedor.py  red_social.py  tarea.py  usuario.py
proyectos/tests/: conftest.py  test_auth.py  test_clientes.py  test_disenadores.py  test_eventos.py  test_modelos.py  test_proveedores.py  test_redes_sociales.py  test_tareas.py  test_usuarios.py
proyectos/views/: __init__.py  auth.py  cliente.py  disenador.py  evento.py  health.py  proveedor.py  red_social.py  tarea.py  usuario.py
