[project]
name = "solorzano-proyecto"
version = "0.1.0"
description = "Gestor de Proyectos de Eventos - API REST con Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "factory-boy>=3.3.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
addopts = "--cov=proyectos --cov-report=term-missing -v"
